# cutlass

./: LICENSE  README.md  case_1_simple_script_gd_v9.py  case_1_simple_script_scikit_fast_v6.py  create_env.txt  experiment_driver_csv.py  experiment_driver_v5.py  pyproject.toml  sensor_generate - commented.py  setup.py
cutlass/: DataObject.py  lle.py  lle_com.py
cutlass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/vignettes/: 01_basic_rectified_workflow.md  02_logical_polish.md  03_batch_experiments.md
examples/: quickstart.py
runs_7k/: summary.csv
runs_csv/: summary.csv
runs_csv/seed1234_N6000_tr25_mofk_global_K10.0_TNA_seed1234_N6117_tr70_mofk_global_K10.0_TNA/: rt_test.csv
runs_csv_6000/: summary.csv
runs_csv_7000/: summary.csv
runs_csv_7000/seed1234_N7000_tr25_mofk_global_K10.0_TNA_seed2027_N6904_tr70_mofk_global_K10.0_TNA/: rt_test.csv
runs_csv_new/: summary.csv
runs_csv_new/seed1234_N6000_tr25_mofk_global_K10.0_TNA_seed1234_N6117_tr70_mofk_global_K10.0_TNA_seed1234_N6117_tr70_mofk_global_K10.0_TNA/: rt_train.csv
runs_csv_new_7k/: summary.csv
runs_leuk/: summary.csv
runs_leuk/leukemia_healthy_indc_seed1234_N1000_tr25_mofk_global_K10.0_TNA/: rt_test.csv  rt_train.csv
runs_leuk/leukemia_healthy_indc_seed1234_N1000_tr25_mofk_global_K10.0_TNA/figs/: roc_all_models.csv  (+6 more)
runs_new/: summary.csv
scripts/: prepare_leukemia_csv.py
src/cutlass/: __init__.py  _math.py  _solvers.py  _version.py  linear_model.py  serialization.py
src/cutlass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: testProcess.py
(+32 files in other folders)
