[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutlass"
version = "0.1.0"
description = "Rectified L1 logistic regression with CUTLASS critical range encoding."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "CUTLASS Contributors"}
]
keywords = ["logistic regression", "lasso", "interpretability", "machine learning"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5"
]

[project.optional-dependencies]
plots = ["matplotlib>=3.5"]

[project.urls]
Homepage = "https://example.com/cutlass"
Repository = "https://example.com/cutlass/repo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cutlass = ["py.typed"]

